--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="menu-category"> Le dessert:</div>
     <div class="menu-item">La crème brûlée</div>
     <div class="menu-item">La tarte au citron meringuée</div>
-    <div class="menu-category"> Le boisson:</div>
+    <div class="menu-category"> La boisson:</div>
     <div class="menu-item">De l´eau</div>
     <div class="menu-item">Le vin</div>
 </section>
@@ -87,11 +87,11 @@
     <h2 class="menu-title">*Menú enfant*: 9€</h2>
     <div class="menu-category">*L´entrée</div>
     <div class="menu-item">Du saucisson</div>
-    <div class="menu-category">*L´entrée</div>
+    <div class="menu-category">*L´plat principal</div>
     <div class="menu-item">Du poulet et des frites</div>
     <div class="menu-category">*Le dessert</div>
     <div class="menu-item">De la mousse au chocolat</div>
-    <div class="menu-category">*L´entrée</div>
+    <div class="menu-category">*La boisson</div>
     <div class="menu-item">Du jus d´orange /de pomme /de pêche</div>
 </section>
 
