--- a/index.html
+++ b/index.html
@@ -57,12 +57,11 @@
 <body>
 
 <header>
-    <h1>LE RESTAURANT D´ALFREDO</h1> <!-- Cambia esto por el nombre de tu restaurante -->
+    <h1>LE RESTAURANT<br>D´ALFREDO</h1>
 </header>
 
 <section>
     <img src="imagenes\ChefFredo.jpg" alt="Photo de chef Alfredo" class="chef-photo">
-    <!-- Cambia "ruta/a/la/foto-del-chef.jpg" por la URL de la foto del chef que quieras usar -->
     <p>¡Bonjour! Bienvenue dans mon restaurant</p>
 </section>
 
@@ -116,7 +115,7 @@
 </section>
 
 <footer>
-    <p>Alfredo Puente Pérez | Nº 24 | 6ºC</p> <!-- Cambia por tu información -->
+    <p>Alfredo Puente Pérez | Nº 24 | 6ºC</p>
 </footer>
 
 </body>
