--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
     <p>Pour le menu du jour, choisissez une entrée, un plat principal, un dessert et une boisson</p>
     <h2 class="menu-title">Menu du jour: 15€</h2>
     <div class="menu-category">L´entrée:</div>
-    <div class="menu-item">De la soupe</div>
+    <div class="menu-item">
+        <img src="imagenes/sopa.jpg" alt="De la soupe" style="max-width: 100px; border-radius: 10px;">
+        De la soupe
+    </div>
     <div class="menu-item">Du jambon blanc</div>
     <div class="menu-category">Le plat principal:</div>
     <div class="menu-item">Du steak </div>
