--- a/index.html
+++ b/index.html
@@ -97,7 +97,10 @@
 <section class="menu-section">
     <h2 class="menu-title">La carte</h2>
     <div class="menu-category">L´entrée:</div>
-    <div class="menu-item">De la quiche lorraine -> 9€</div>
+    <div class="menu-item">
+    <img src="imagenes/Quiche.jpg" alt="Quiche Lorraine" style="width:50px; height:50px; vertical-align:middle;">
+        De la quiche lorraine -> 9€
+    </div>
     <div class="menu-item">Des sardines -> 12€</div>
     <div class="menu-item">De la salade -> 8€</div>
     <div class="menu-category">Le plat principal:</div>
