--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <h2 class="menu-title">La carte</h2>
     <div class="menu-category">L´entrée:</div>
     <div class="menu-item">
-    <img src="imagenes/Quiche.jpg" alt="Quiche Lorraine" style="width:50px; height:50px; vertical-align:middle;">
+    <img src="imagenes/Quiche.jpg" alt="Quiche Lorraine" style="width:150px; height:150px; vertical-align:middle;">
         De la quiche lorraine -> 9€
     </div>
     <div class="menu-item">Des sardines -> 12€</div>
@@ -106,7 +106,9 @@
     <div class="menu-category">Le plat principal:</div>
     <div class="menu-item">De l´omelette -> 11€</div>
     <div class="menu-item">De la pizza -> 12€ </div>
-    <div class="menu-item">De la hamburguer -> 10€</div>
+    <div class="menu-item">
+     <img src="imagenes/Hamburguesa.jpg" alt="hamburguer" style="width:150px; height:150px; vertical-align:middle;">
+        De la hamburguer -> 10€</div>
     <div class="menu-category">Le dessert:</div>
     <div class="menu-item">De la tarte du chocolat -> 6€</div>
     <div class="menu-item">Du fromage -> 7€</div>
