--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
     <div class="menu-item">Du poulet et des frites</div>
     <div class="menu-category">*Le dessert</div>
     <div class="menu-item">De la mousse au chocolat</div>
+    <img src="imagenes/Mousse.jpg" alt="mousse" style="width:100px; height:100px; vertical-align:middle;">
     <div class="menu-category">*La boisson</div>
     <div class="menu-item">Du jus d´orange /de pomme /de pêche</div>
 </section>
@@ -98,7 +99,7 @@
     <h2 class="menu-title">La carte</h2>
     <div class="menu-category">L´entrée:</div>
     <div class="menu-item">
-    <img src="imagenes/Quiche.jpg" alt="Quiche Lorraine" style="width:150px; height:150px; vertical-align:middle;">
+    <img src="imagenes/Quiche.jpg" alt="Quiche Lorraine" style="width:100px; height:100px; vertical-align:middle;">
         De la quiche lorraine -> 9€
     </div>
     <div class="menu-item">Des sardines -> 12€</div>
@@ -107,7 +108,7 @@
     <div class="menu-item">De l´omelette -> 11€</div>
     <div class="menu-item">De la pizza -> 12€ </div>
     <div class="menu-item">
-     <img src="imagenes/Hamburguesa.jpg" alt="hamburguer" style="width:150px; height:150px; vertical-align:middle;">
+    <img src="imagenes/Hamburguesa.jpg" alt="hamburguer" style="width:100px; height:100px; vertical-align:middle;">
         De la hamburguer -> 10€</div>
     <div class="menu-category">Le dessert:</div>
     <div class="menu-item">De la tarte du chocolat -> 6€</div>
@@ -116,7 +117,7 @@
     <div class="menu-category">La boisson:</div>
     <div class="menu-item">Du soda -> 3€</div>
     <div class="menu-item">Du lait -> 3€</div>
-   <div class="menu-item">Du le champagne -> 6€</div>
+    <div class="menu-item">Du le champagne -> 6€</div>
     
 </section>
 
