--- a/index.html
+++ b/index.html
@@ -73,13 +73,19 @@
     <div class="menu-item">Du jambon blanc</div>
     <div class="menu-category">Le plat principal:</div>
     <div class="menu-item">Du steak </div>
-    <div class="menu-item">Du riz</div>
+    <div class="menu-item">
+        <img src="imagenes/ArrozBlanco.jpeg" alt="vino" style="width:100px; height:100px; vertical-align:middle;">
+        Du riz
+    </div>
     <div class="menu-category"> Le dessert:</div>
     <div class="menu-item">La crème brûlée</div>
     <div class="menu-item">La tarte au citron meringuée</div>
     <div class="menu-category"> La boisson:</div>
     <div class="menu-item">De l´eau</div>
-    <div class="menu-item">Le vin</div>
+    <div class="menu-item">  
+        <img src="imagenes/Vino.jpeg" alt="vino" style="width:100px; height:100px; vertical-align:middle;">
+        Le vin
+    </div>
 </section>
 
 <section class="menu-section">
@@ -87,10 +93,15 @@
     <div class="menu-category">*L´entrée</div>
     <div class="menu-item">Du saucisson</div>
     <div class="menu-category">*L´plat principal</div>
-    <div class="menu-item">Du poulet et des frites</div>
+    <div class="menu-item">
+        <img src="imagenes/PolloPatatas.jpg" alt="poulet" style="width:100px; height:100px; vertical-align:middle;">
+         Du poulet et des frites
+    </div>
     <div class="menu-category">*Le dessert</div>
-    <div class="menu-item">De la mousse au chocolat</div>
+    <div class="menu-item">
     <img src="imagenes/Mousse.jpg" alt="mousse" style="width:100px; height:100px; vertical-align:middle;">
+        De la mousse au chocolat
+    </div>
     <div class="menu-category">*La boisson</div>
     <div class="menu-item">Du jus d´orange /de pomme /de pêche</div>
 </section>
@@ -117,7 +128,10 @@
     <div class="menu-category">La boisson:</div>
     <div class="menu-item">Du soda -> 3€</div>
     <div class="menu-item">Du lait -> 3€</div>
-    <div class="menu-item">Du le champagne -> 6€</div>
+    <div class="menu-item">
+         <img src="imagenes/Champagne.jpeg" alt="champagne" style="width:100px; height:100px; vertical-align:middle;">
+        Du le champagne -> 6€
+    </div>
     
 </section>
 
