--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
     <p>Pour le menu du jour, choisissez une entrée, un plat principal, un dessert et une boisson</p>
     <h2 class="menu-title">Menu du jour: 15€</h2>
     <div class="menu-category">L´entrée:</div>
-    <div class="menu-item">De la soupe</div>
+    <div class="menu-item">
+         <img src="imagenes/Sopa.jpg" alt="sopa" style="width:100px; height:100px; vertical-align:middle;">
+        De la soupe
+    </div>
     <div class="menu-item">Du jambon blanc</div>
     <div class="menu-category">Le plat principal:</div>
     <div class="menu-item">Du steak </div>
@@ -79,7 +82,10 @@
     </div>
     <div class="menu-category"> Le dessert:</div>
     <div class="menu-item">La crème brûlée</div>
-    <div class="menu-item">La tarte au citron meringuée</div>
+    <div class="menu-item">
+         <img src="imagenes/MerengueLimon.jpeg" alt="meringuee" style="width:100px; height:100px; vertical-align:middle;">
+        La tarte au citron meringuée
+    </div>
     <div class="menu-category"> La boisson:</div>
     <div class="menu-item">De l´eau</div>
     <div class="menu-item">  
@@ -122,7 +128,10 @@
     <img src="imagenes/Hamburguesa.jpg" alt="hamburguer" style="width:100px; height:100px; vertical-align:middle;">
         De la hamburguer -> 10€</div>
     <div class="menu-category">Le dessert:</div>
-    <div class="menu-item">De la tarte du chocolat -> 6€</div>
+    <div class="menu-item">
+         <img src="imagenes/TartaChocolate.jpeg" alt="vino" style="width:100px; height:100px; vertical-align:middle;">
+        De la tarte du chocolat -> 6€
+    </div>
     <div class="menu-item">Du fromage -> 7€</div>
     <div class="menu-item">Un yaourt ->5€</div>
     <div class="menu-category">La boisson:</div>
