--- a/index.html
+++ b/index.html
@@ -73,21 +73,33 @@
          <img src="imagenes/Sopa.jpg" alt="sopa" style="width:100px; height:100px; vertical-align:middle;">
         De la soupe
     </div>
-    <div class="menu-item">Du jambon blanc</div>
+    <div class="menu-item">
+        <img src="imagenes/JamonYork.jpeg" alt="jambon" style="width:100px; height:100px; vertical-align:middle;">
+        Du jambon blanc
+    </div>
     <div class="menu-category">Le plat principal:</div>
-    <div class="menu-item">Du steak </div>
+    <div class="menu-item">
+        <img src="imagenes/Steak.jpeg" alt="steakn" style="width:100px; height:100px; vertical-align:middle;">
+        Du steak 
+    </div>
     <div class="menu-item">
         <img src="imagenes/ArrozBlanco.jpeg" alt="vino" style="width:100px; height:100px; vertical-align:middle;">
         Du riz
     </div>
     <div class="menu-category"> Le dessert:</div>
-    <div class="menu-item">La crème brûlée</div>
+    <div class="menu-item">
+        <img src="imagenes/CremeBrulee.jpeg" alt="creme" style="width:100px; height:100px; vertical-align:middle;">
+        La crème brûlée
+    </div>
     <div class="menu-item">
          <img src="imagenes/MerengueLimon.jpeg" alt="meringuee" style="width:100px; height:100px; vertical-align:middle;">
         La tarte au citron meringuée
     </div>
     <div class="menu-category"> La boisson:</div>
-    <div class="menu-item">De l´eau</div>
+    <div class="menu-item">
+        <img src="imagenes/Agua.jpeg" alt="eau" style="width:100px; height:100px; vertical-align:middle;">
+        De l´eau
+    </div>
     <div class="menu-item">  
         <img src="imagenes/Vino.jpeg" alt="vino" style="width:100px; height:100px; vertical-align:middle;">
         Le vin
@@ -97,7 +109,10 @@
 <section class="menu-section">
     <h2 class="menu-title">*Menú enfant*: 9€</h2>
     <div class="menu-category">*L´entrée</div>
-    <div class="menu-item">Du saucisson</div>
+    <div class="menu-item">
+        <img src="imagenes/Salchichon.jpg" alt="saucisson" style="width:100px; height:100px; vertical-align:middle;">
+        Du saucisson
+    </div>
     <div class="menu-category">*L´plat principal</div>
     <div class="menu-item">
         <img src="imagenes/PolloPatatas.jpg" alt="poulet" style="width:100px; height:100px; vertical-align:middle;">
