--- a/index.html
+++ b/index.html
@@ -134,11 +134,23 @@
     <img src="imagenes/Quiche.jpg" alt="Quiche Lorraine" style="width:100px; height:100px; vertical-align:middle;">
         De la quiche lorraine -> 9€
     </div>
-    <div class="menu-item">Des sardines -> 12€</div>
-    <div class="menu-item">De la salade -> 8€</div>
+    <div class="menu-item">
+        <img src="imagenes/Sardinas.jpeg" alt="sardines" style="width:100px; height:100px; vertical-align:middle;">
+        Des sardines -> 12€
+    </div>
+    <div class="menu-item">
+         <img src="imagenes/Ensalada.jpeg" alt="sardines" style="width:100px; height:100px; vertical-align:middle;">
+        De la salade -> 8€
+    </div>
     <div class="menu-category">Le plat principal:</div>
-    <div class="menu-item">De l´omelette -> 11€</div>
-    <div class="menu-item">De la pizza -> 12€ </div>
+    <div class="menu-item">
+         <img src="imagenes/Tortilla.jpg" alt="omelette" style="width:100px; height:100px; vertical-align:middle;">
+        De l´omelette -> 11€
+    </div>
+    <div class="menu-item">
+         <img src="imagenes/Pizza.jpg" alt="pizza" style="width:100px; height:100px; vertical-align:middle;">
+        De la pizza -> 12€ 
+    </div>
     <div class="menu-item">
     <img src="imagenes/Hamburguesa.jpg" alt="hamburguer" style="width:100px; height:100px; vertical-align:middle;">
         De la hamburguer -> 10€</div>
@@ -147,11 +159,23 @@
          <img src="imagenes/TartaChocolate.jpeg" alt="vino" style="width:100px; height:100px; vertical-align:middle;">
         De la tarte du chocolat -> 6€
     </div>
-    <div class="menu-item">Du fromage -> 7€</div>
-    <div class="menu-item">Un yaourt ->5€</div>
+    <div class="menu-item">
+         <img src="imagenes/Queso.jpeg" alt="fromage" style="width:100px; height:100px; vertical-align:middle;">
+        Du fromage -> 7€
+    </div>
+    <div class="menu-item">
+         <img src="imagenes/Yogurt.jpeg" alt="yaourt" style="width:100px; height:100px; vertical-align:middle;">
+        Un yaourt ->5€
+    </div>
     <div class="menu-category">La boisson:</div>
-    <div class="menu-item">Du soda -> 3€</div>
-    <div class="menu-item">Du lait -> 3€</div>
+    <div class="menu-item">
+         <img src="imagenes/Soda.jpeg" alt="soda" style="width:100px; height:100px; vertical-align:middle;">
+        Du soda -> 3€
+    </div>
+    <div class="menu-item">
+         <img src="imagenes/Leche.jpeg" alt="lait" style="width:100px; height:100px; vertical-align:middle;">
+        Du lait -> 3€
+    </div>
     <div class="menu-item">
          <img src="imagenes/Champagne.jpeg" alt="champagne" style="width:100px; height:100px; vertical-align:middle;">
         Du le champagne -> 6€
