--- a/index.html
+++ b/index.html
@@ -124,7 +124,10 @@
         De la mousse au chocolat
     </div>
     <div class="menu-category">*La boisson</div>
-    <div class="menu-item">Du jus d´orange /de pomme /de pêche</div>
+    <div class="menu-item">
+         <img src="imagenes/Zumo.jpeg" alt="jus" style="width:100px; height:100px; vertical-align:middle;">
+        Du jus d´orange /de pomme /de pêche
+    </div>
 </section>
 
 <section class="menu-section">
