--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </header>
 
 <section>
-    <img src="imagenes\ChefFredo.jpg" alt="Photo de chef Alfredo" class="chef-photo">
+    <img src="imagenes\ChefFredoRatatuille.jpg" alt="Photo de chef Alfredo" class="chef-photo">
     <p>¡Bonjour! Bienvenue dans mon restaurant</p>
 </section>
 
