--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     </div>
     <div class="menu-item">
     <img src="imagenes/Hamburguesa.jpg" alt="hamburguer" style="width:100px; height:100px; vertical-align:middle;">
-        De la hamburguer -> 10€</div>
+        De le hamburguer -> 10€</div>
     <div class="menu-category">Le dessert:</div>
     <div class="menu-item">
          <img src="imagenes/TartaChocolate.jpeg" alt="vino" style="width:100px; height:100px; vertical-align:middle;">
